--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,10 +3,15 @@
 
 :root{
     --primary: #fe2c55;
+    //defaulayout
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px; 
 
 }
 
 * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
